added `StrippableFenceBlock` added `StrippableFenceGateBlock` added Wood/Hyhae Fence(Gate)s